--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -6,9 +6,11 @@
     >
 
     <RelativeLayout
+        android:id="@+id/rel_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         >
 
         <TextView
@@ -35,9 +37,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#B7B7B7"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         />
 
 </LinearLayout>
